# cppm-homwWorks-10.02

./: CMakeLists.txt  Equilateral_triangle.cpp  Equilateral_triangle.h  Figure.h  IncorrectFigure.cpp  IncorrectFigure.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rhomb.cpp  Rhomb.h  Right_triangle.cpp  Right_triangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  _Rectangle.cpp  _Rectangle.h  main.cpp
cppm-homeWorks-10.02/: CMakeLists.txt  cppm-homeWorks-10.02.cpp  cppm-homeWorks-10.02.h
